--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,6 @@
         <jakarta-servlet-jsp-jstl-api.version>3.0.2</jakarta-servlet-jsp-jstl-api.version>
         <jakarta-servlet-jsp-jstl.version>3.0.1</jakarta-servlet-jsp-jstl.version>
         <jackson.version>2.15.3</jackson.version>
-        <mybatis.version>3.5.16</mybatis.version>
-        <mybatis-spring.version>3.0.4</mybatis-spring.version>
         <hikaricp.version>5.1.0</hikaricp.version>
         <jakarta-validation.version>3.0.2</jakarta-validation.version>
         <hibernate-validation.version>8.0.2.Final</hibernate-validation.version>
@@ -141,6 +139,27 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <!-- Spring + JPA 연동 -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${spring-framework.version}</version>
+        </dependency>
+
+        <!-- JPA API -->
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+        <!-- Hibernate -->
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.4.4.Final</version>
         </dependency>
     </dependencies>
 
